--- a/Backend/appsettings.Development.json
+++ b/Backend/appsettings.Development.json
@@ -4,5 +4,16 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedCrossOrigin" : [
+    "http://localhost:5300",
+    "https://localhost:5301",
+    "http://localhost:3000",
+    "https://localhost:3000"
+  ],
+  "ConnectionStrings": {
+    "MainDb": "Server=sql.bsite.net\\MSSQL2016;Integrated Security=false;User Id=jakubo_solbegTask2;Password=741solbeg2"
+  },
+  "MigrationAssembly" : "Backend",
+  "jwtkey": "sdion2p3b9f4353wrsdf34wr7b29b9wefwmnfnenf8349fnnb"
 }
