--- a/Backend/appsettings.Development.json
+++ b/Backend/appsettings.Development.json
@@ -12,7 +12,7 @@
     "https://localhost:3000"
   ],
   "ConnectionStrings": {
-    "MainDb": "Server=sql.bsite.net\\MSSQL2016;Integrated Security=false;User Id=jakubo_solbegTask2;Password=741solbeg2"
+    "MainDb": "Server=sql.bsite.net\\MSSQL2016;Integrated Security=false;User Id=jakubo_solbegTask2;Password=741solbeg2;TrustServerCertificate=true"
   },
   "MigrationAssembly" : "Backend",
   "jwtkey": "sdion2p3b9f4353wrsdf34wr7b29b9wefwmnfnenf8349fnnb"
